# shiftguard_agent_v1

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/: timecards.json
data/policies/: overtime.md  rounding.md  timekeeping.md
evals/: run_evals.py  scenarios.jsonl
evals/report/: summary.md
logs.example/: agent_all_tool_call.json  agent_out_of_scope.json  agent_search_policy.json
src/shiftguard/: cli.py  config.py  logging_setup.py
src/shiftguard/agent/: llm.py  prompts.py  react.py  schemas.py
src/shiftguard/rag/: chunking.py  index.py  retriever.py
src/shiftguard/tools/: compute.py  registry.py  tickets.py  timecards.py
tests/: conftest.py  test_chunking.py  test_react.py  test_routing.py  test_tools.py
